--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -54,6 +54,11 @@
         <a class="nav-item nav-link {{ active_status }}" href="{{ url }}" {%- if html_page.external_url and site.open_new_tab -%} target="_blank" {%- endif -%}>{{ html_page.title }}</a>
 
       {% endfor %}
+      
+      <a class="nav-item nav-link " href="https://github.com/liver121888/liver121888.github.io">
+        <i class="fab fa-1x fa-github">
+        </i>
+      </a>
 
       <span id="theme-toggler" class="nav-item nav-link" role="button" onclick="toggleTheme()"></span>
     </div>
