--- a/_includes/head.html
+++ b/_includes/head.html
@@ -37,4 +37,5 @@
   <!-- Custom CSS -->
   <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
 
+  {% include analytics.html %}
 </head>
