Update Autobiography. Modify Publications. Modify Hobby.

--- a/_sass/_timeline.scss
+++ b/_sass/_timeline.scss
@@ -36,6 +36,13 @@
       padding-bottom: 20px;
       border-bottom: 1px dashed $dark;
 
+      .role {
+        margin-top: -5px;
+        margin-bottom: 15px;
+        color: #ffffff;
+        font-style: italic 
+      }
+
       .date {
         margin-top: -5px;
         margin-bottom: 15px;
