--- a/_includes/publication/publication_timeline.html
+++ b/_includes/publication/publication_timeline.html
@@ -8,7 +8,8 @@
           {%- else -%}
           <h2>{{ item.title }}</h2>
           {%- endif -%}
-          <h6 class="date">{{ item.location }}</h6>
+          <h4 class="role">{{ item.author }}</h4>
+          <h5 class="date">{{ item.location }}</h5>
           <p>{{ item.description }}</p>
         </div>
       </div>
